WIP - upgrades java, refactors dependencies in pom.xml, restructures DAO, adds services adds new DTO, removes intermediate mappingfrom scraping to model, removes Jackson implementation for building respose, adds javadoc, refactors controllers, restructures packages, reformats docker-compose, reformats README.md